--- a/FrontEnd/Index/index.html
+++ b/FrontEnd/Index/index.html
@@ -11,13 +11,45 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="slide">
-            <div class="slideimg">
-                <img src="/FrontEnd/img/top-fon.jpg">
-            </div>
+    <div id="exception"></div>
+    <div class="topPanel flex-s-c">
+        <div class="btn-mobile btn-drop" data-class="topPanel-left">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
-    </header>
+        <div class="topPanel-left flex-c">
+            <div class="logoMini flex-c-c"><a href=""><img
+                        src="https://www.brasilmuonline.com.br/assets/raven_light/images/logo-mini.png" alt="Logo"></a>
+            </div>
+            <ul class="menu flex-c">
+                <li><a href="">Home </a></li>
+                <li><a href="">Rankings</a></li>
+                <li><a href="">Loja</a></li>
+                <li><a href="">Suporte</a></li>
+                <li><a href="">+ Infos</a></li>
+            </ul>
+        </div>
+        <div class="topPanel-right flex-c">
+            <a href="" class="sign-up">Registro</a> <a href="#login"
+                class="button button-small login open_modal">Login</a>
+
+        </div>
+    </div>
+    <div class="container">
+        <header class="header">
+            <div class="sparks">
+                <div class="spark_1"></div>
+                <div class="spark_2"></div>
+                <div class="spark_3"></div>
+                <div class="spark_4 spark-big"></div>
+            </div>
+            <div class="logo">
+                <a href="https://www.brasilmuonline.com.br/"><img
+                        src="https://www.brasilmuonline.com.br/assets/raven_light/images/logo.png" alt="Logo"></a>
+            </div><!--logo-->
+        </header>
+    </div>
 </body>
 
 </html>
