--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,11 +12,6 @@
 <body>
     <div id="exception"></div>
     <div class="topPanel flex-s-c">
-        <div class="btn-mobile btn-drop" data-class="topPanel-left">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
         <div class="topPanel-left flex-c">
             <div class="logoMini flex-c-c"><a href=""><img
                         src="https://www.brasilmuonline.com.br/assets/raven_light/images/logo-mini.png" alt="Logo"></a>
@@ -45,11 +39,10 @@
                 <div class="spark_4 spark-big"></div>
             </div>
             <div class="logo">
-                <a href="https://www.brasilmuonline.com.br/"><img
+                <a href=""><img
                         src="https://www.brasilmuonline.com.br/assets/raven_light/images/logo.png" alt="Logo"></a>
-            </div><!--logo-->
+            </div>
         </header>
     </div>
 </body>
-
 </html>
