--- a/FrontEnd/cadastro.html
+++ b/FrontEnd/cadastro.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/jpg" href="/FrontEnd/img/favicon.png" />
-    <link rel="stylesheet" href="../FrontEnd/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Mu Nostalgia</title>
 </head>
 
-<body class="bodyimg">
+<body>
     <div id="exception"></div>
     <div class="topPanel flex-s-c">
         <div class="topPanel-left flex-c">
@@ -27,22 +27,7 @@
         <div class="topPanel-right flex-c">
             <a href="" class="sign-up">Registro</a> <a href="#login"
                 class="button button-small login open_modal">Login</a>
-
         </div>
-    </div>
-    <div class="container">
-        <header class="header">
-            <div class="sparks">
-                <div class="spark_1"></div>
-                <div class="spark_2"></div>
-                <div class="spark_3"></div>
-                <div class="spark_4 spark-big"></div>
-            </div>
-            <div class="logo">
-                <a href=""><img
-                        src="https://www.brasilmuonline.com.br/assets/raven_light/images/logo.png" alt="Logo"></a>
-            </div>
-        </header>
     </div>
 </body>
 </html>
