--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 </head>
 
 <body class="bodyimg">
-    <div id="exception"></div>
     <div class="topPanel flex-s-c">
         <div class="topPanel-left flex-c">
             <div class="logoMini flex-c-c"><a href=""><img
                         src="https://www.brasilmuonline.com.br/assets/raven_light/images/logo-mini.png" alt="Logo"></a>
             </div>
             <ul class="menu flex-c">
-                <li><a href="">Home </a></li>
+                <li><a href="index.html">Home </a></li>
                 <li><a href="">Rankings</a></li>
                 <li><a href="">Loja</a></li>
                 <li><a href="">Suporte</a></li>
@@ -25,9 +24,8 @@
             </ul>
         </div>
         <div class="topPanel-right flex-c">
-            <a href="" class="sign-up">Registro</a> <a href="#login"
-                class="button button-small login open_modal">Login</a>
-
+            <a href="FrontEnd/cadastro.html" class="cadastrarbotao">Cadastre-se</a> <a href=""
+                class="loginbotao">Entre</a>
         </div>
     </div>
     <div class="container">
@@ -43,6 +41,9 @@
                         src="https://www.brasilmuonline.com.br/assets/raven_light/images/logo.png" alt="Logo"></a>
             </div>
         </header>
+    </div>
+    <div>
+        teste
     </div>
 </body>
 </html>
